infra/service.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: busapp 
  namespace: dev
spec: 
  selector: 
    app: bus 
    tier: frontend 
  ports: 
    - port: 80 
      targetPort: 8001 
  type: ClusterIP
